# robotcraft-pathfinding

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: amcl.launch  gmapping.launch  lidar.launch  maze.launch  maze_basic.launch  maze_pro.launch  robot_bringup.launch  robot_driver.launch  robot_firmware.launch
scans/: map.pgm  map.yaml  map_backup.pgm  map_backup.yaml  map_filtered.pgm  map_matrix.txt  path_route.txt  rob_pos_backup.txt  robot_position.txt
src/: map_loader.py  map_saver.cpp  maze_BASICsolver.cpp  maze_PROsolver.py  path_finder.py  robot_driver.cpp
world/: robotcraft2017_robot.inc  robotcraft2018_robot.inc  robotcraft2019_robot.inc  robotcraft_maze.world
